Fixed some minor alignment issues.

--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
     margin: 0px;
     box-sizing: border-box;
     width: 100%;
-    height: 100%;
 }
 
 img{
@@ -31,9 +30,10 @@ header{
 .dashboardWrapper{
     display: flex;
     flex-direction: column;
-    height: 70%;
+    height: 100%;
     padding-top: 20px;
     color: white;
+    gap: 30px;
 }
 
 .dashboardWrapper>:nth-child(1){
@@ -113,10 +113,12 @@ input{
 
 .right>*{
     height: 50px;
+    display: flex;
+    align-items: center;
 }
 
 .notificationIcon{
-    text-align: right;
+    justify-content: flex-end;
 }
 
 .notificationIcon>img{
@@ -125,14 +127,12 @@ input{
 }
 
 .logo{
-    text-align: center;
+    justify-content: center;
 }
 
 .logo>img{
     width: 40px;
     height: 40px;
-    position: relative;
-    bottom: 7px;
 }
 
 .name{
@@ -144,7 +144,7 @@ input{
 .profile{
     display: flex;
     position: relative;
-    top: -10px;
+    top: 15px;
 }
 
 .nameDetails{
